--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     onkeyup="searchMatches()">
                 <div id="matches">
 
- <div class="match-link" data-league="BOXING" data-frame="https://embedsports.me/boxing/oleksandr-usyk-vs-daniel-dubois-2-stream-1">
+ <div class="match-link" data-league="BOXING" data-frame="https://buffstreamshd.icu/channal/Oleksandr-Usyk--vs--Daniel-Dubois/">
     <div class="match-card">
         <div class="match-league">
             BOXING
