--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Top Rank Boxing | Oleksandr Usyk vs Daniel Dubois 2
     </div>
 </div>
 
-<div class="match-link" data-league="MMA" data-frame="https://topembed.pw/channel/TNTSports1[UK]">
+<div class="match-link" data-league="MMA" data-frame="https://buffstreamshd.icu/channal/Max-Holloway--vs--Dustin-Poirier/">
     <div class="match-card">
         <div class="match-league">
             UFC
@@ -85,7 +85,7 @@ UFC 318 EARLY PRELIMS | Adam Fugitt vs Islam Dulatov
 </div>
 
 
-<div class="match-link" data-league="MMA" data-frame="https://topembed.pw/channel/TNTSports1[UK]">
+<div class="match-link" data-league="MMA" data-frame="https://buffstreamshd.icu/channal/Max-Holloway--vs--Dustin-Poirier/">
     <div class="match-card">
         <div class="match-league">
             UFC
@@ -97,7 +97,7 @@ UFC 318 Preliminary | Kyler Phillips vs Vinicius Oliveira
     </div>
 </div>
 
-<div class="match-link" data-league="MMA" data-frame="https://topembed.pw/channel/TNTSports1[UK]">
+<div class="match-link" data-league="MMA" data-frame="https://buffstreamshd.icu/channal/Max-Holloway--vs--Dustin-Poirier/">
     <div class="match-card">
         <div class="match-league">
             UFC
