--- a/index.html
+++ b/index.html
@@ -108,6 +108,19 @@ UFC 318 MAIN CARD | Max Holloway - Dustin Poirier
         <div class="match-time">July 19, 2025 10:00 PM ET</div>
     </div>
 </div>
+
+
+<div class="match-link" data-league="BOXING" data-frame="https://buffstreamshd.icu/channal/Manny-Pacquiao--vs--Mario-Barrios/">
+    <div class="match-card">
+        <div class="match-league">
+            BOXING
+        </div>
+        <div class="match-title">
+BOXING : Manny Pacquiao vs Mario Barrios
+        </div>
+        <div class="match-time">July 19, 2025 8:00 PM ET</div>
+    </div>
+</div>			
  
  
  <div class="match-link" data-league="SOCCER" data-frame="https://topembed.pw/channel/ex7844436">
