--- a/player.html
+++ b/player.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script type='text/javascript'
-        src='//pl18541007.profitableratecpm.com/91/94/0f/91940f84fa379733194239a75eb1cbd0.js'></script>
+    <script type='text/javascript' src='//pl18979059.profitableratecpm.com/96/88/cb/9688cbe553144eccf9f8893dc99de346.js'></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buffstreams | Live Match Player</title>
@@ -27,17 +26,16 @@
         <div class="content-box">
             <section class="main-content">
                 <div class="ad-center">
-                    <script type="text/javascript">
-                        atOptions = {
-                            'key': '0917b618562c4a09e453780af8821437',
-                            'format': 'iframe',
-                            'height': 60,
-                            'width': 468,
-                            'params': {}
-                        };
-                    </script>
-                    <script type="text/javascript"
-                        src="//www.highperformanceformat.com/0917b618562c4a09e453780af8821437/invoke.js"></script>
+                 <script type="text/javascript">
+	atOptions = {
+		'key' : 'a33899126408056290e02b655b9fc12d',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/a33899126408056290e02b655b9fc12d/invoke.js"></script>
                 </div>
                 <div
                     style="background-color:#1e242c; color:#ccc; padding:12px 16px; border-radius:8px; border:1px solid #30363d; margin-bottom:15px; font-size:14px; font-weight:500; text-align:center; box-shadow:0 0 6px rgba(0,0,0,0.2);">
@@ -49,45 +47,42 @@
                         frameborder="0" allowfullscreen src=""></iframe>
                 </div>
                 <div class="ad-center">
-                    <script type="text/javascript">
-                        atOptions = {
-                            'key': '62a694d4a1a8f6f75b744585d414f93c',
-                            'format': 'iframe',
-                            'height': 50,
-                            'width': 320,
-                            'params': {}
-                        };
-                    </script>
-                    <script type="text/javascript"
-                        src="//www.highperformanceformat.com/62a694d4a1a8f6f75b744585d414f93c/invoke.js"></script>
+                 <script type="text/javascript">
+	atOptions = {
+		'key' : '19f7677da84c1912f89f478a0e3579f5',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/19f7677da84c1912f89f478a0e3579f5/invoke.js"></script>
                 </div>
             </section>
             <aside class="sidebar">
                 <div class="ad">
-                    <script type="text/javascript">
-                        atOptions = {
-                            'key': '05f629c84db5ad6e762d2406be4ee48d',
-                            'format': 'iframe',
-                            'height': 250,
-                            'width': 300,
-                            'params': {}
-                        };
-                    </script>
-                    <script type="text/javascript"
-                        src="//www.highperformanceformat.com/05f629c84db5ad6e762d2406be4ee48d/invoke.js"></script>
+                  <script type="text/javascript">
+	atOptions = {
+		'key' : '91a56bd712bd2940ff3a1edfaf3b00cb',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/91a56bd712bd2940ff3a1edfaf3b00cb/invoke.js"></script>
                 </div>
                 <div class="ad">
-                    <script type="text/javascript">
-                        atOptions = {
-                            'key': 'b145f0a8ad4e19e103be39d5a7fa45be',
-                            'format': 'iframe',
-                            'height': 300,
-                            'width': 160,
-                            'params': {}
-                        };
-                    </script>
-                    <script type="text/javascript"
-                        src="//www.highperformanceformat.com/b145f0a8ad4e19e103be39d5a7fa45be/invoke.js"></script>
+                   <script type="text/javascript">
+	atOptions = {
+		'key' : '6f9d413a17f9faceb3acbce2d94a743d',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/6f9d413a17f9faceb3acbce2d94a743d/invoke.js"></script>
                 </div>
             </aside>
         </div>
