--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Top Rank Boxing | Oleksandr Usyk vs Daniel Dubois 2
     </div>
 </div>
 
-<div class="match-link" data-league="MMA" data-frame="https://buffstreamshd.icu/channal/Max-Holloway--vs--Dustin-Poirier/">
+<div class="match-link" data-league="MMA" data-frame="https://topembed.pw/channel/RMCSport1[France]">
     <div class="match-card">
         <div class="match-league">
             UFC
@@ -85,7 +85,7 @@ UFC 318 EARLY PRELIMS | Adam Fugitt vs Islam Dulatov
 </div>
 
 
-<div class="match-link" data-league="MMA" data-frame="https://buffstreamshd.icu/channal/Max-Holloway--vs--Dustin-Poirier/">
+<div class="match-link" data-league="MMA" data-frame="https://topembed.pw/channel/RMCSport1[France]">
     <div class="match-card">
         <div class="match-league">
             UFC
@@ -97,7 +97,7 @@ UFC 318 Preliminary | Kyler Phillips vs Vinicius Oliveira
     </div>
 </div>
 
-<div class="match-link" data-league="MMA" data-frame="https://buffstreamshd.icu/channal/Max-Holloway--vs--Dustin-Poirier/">
+<div class="match-link" data-league="MMA" data-frame="https://topembed.pw/channel/RMCSport1[France]">
     <div class="match-card">
         <div class="match-league">
             UFC
@@ -110,7 +110,7 @@ UFC 318 MAIN CARD | Max Holloway - Dustin Poirier
 </div>
 
 
-<div class="match-link" data-league="BOXING" data-frame="https://buffstreamshd.icu/channal/Manny-Pacquiao--vs--Mario-Barrios/">
+<div class="match-link" data-league="BOXING" data-frame="https://topembed.pw/channel/CosmoteSport9[Greece]">
     <div class="match-card">
         <div class="match-league">
             BOXING
@@ -120,7 +120,7 @@ BOXING : Manny Pacquiao vs Mario Barrios
         </div>
         <div class="match-time">July 19, 2025 8:00 PM ET</div>
     </div>
-</div>			
+</div>	
  
  
  <div class="match-link" data-league="SOCCER" data-frame="https://topembed.pw/channel/ex7844436">
